basic/lexer.c
/* Generated by re2c 0.16 on Thu Sep 29 16:57:24 2016 */
#line 1 "lexer.re"
#include <stdio.h>
#include <string.h>
#include <stdbool.h>

#include "lexer.h"

struct token lex(const char *input)
{
	int len = strlen(input);
	int marker;
	int ctxmarker;
	int index = 0;
#define YYCTYPE        char
#define YYPEEK()       input[index]
#define YYSKIP()       index++
#define YYBACKUP()     marker = index
#define YYBACKUPCTX()  ctxmarker = index
#define YYRESTORE()    index = marker
#define YYRESTORECTX() index = ctxmarker
#define YYLESSTHAN(n)  len - index < n
#define YYFILL(n)      {}
	
#line 26 "lexer.c"
{
	char yych;
	yych = YYPEEK ();
	switch (yych) {
	case '\t':
	case ' ':	goto yy4;
	case '*':	goto yy7;
	case '+':	goto yy9;
	case '-':	goto yy11;
	case '/':	goto yy13;
	case '0':	goto yy15;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy16;
	default:	goto yy2;
	}
yy2:
	YYSKIP ();
yy3:
#line 35 "lexer.re"
	{ return (struct token){ 0, 0 }; }
#line 54 "lexer.c"
yy4:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '\t':
	case ' ':	goto yy4;
	default:	goto yy6;
	}
yy6:
#line 42 "lexer.re"
	{ return (struct token){ -1, index }; }
#line 66 "lexer.c"
yy7:
	YYSKIP ();
#line 40 "lexer.re"
	{ return (struct token){ TOK_TIMES, index }; }
#line 71 "lexer.c"
yy9:
	YYSKIP ();
#line 38 "lexer.re"
	{ return (struct token){ TOK_PLUS, index }; }
#line 76 "lexer.c"
yy11:
	YYSKIP ();
#line 39 "lexer.re"
	{ return (struct token){ TOK_MINUS, index }; }
#line 81 "lexer.c"
yy13:
	YYSKIP ();
#line 41 "lexer.re"
	{ return (struct token){ TOK_DIVIDE, index }; }
#line 86 "lexer.c"
yy15:
	YYSKIP ();
	YYBACKUP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'X':
	case 'x':	goto yy19;
	default:	goto yy3;
	}
yy16:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy16;
	default:	goto yy18;
	}
yy18:
#line 36 "lexer.re"
	{ return (struct token){ TOK_INTEGER, index }; }
#line 115 "lexer.c"
yy19:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy21;
	default:	goto yy20;
	}
yy20:
	YYRESTORE ();
	goto yy3;
yy21:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy21;
	default:	goto yy23;
	}
yy23:
#line 37 "lexer.re"
	{ return (struct token){ 2, index }; }
#line 178 "lexer.c"
}
#line 44 "lexer.re"

}